--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Md. Faiyaj Zaman</div>
-                <div class="text-3">And I'm a <span class="typing"></span></div>
+                <div class="text-3"><span class="typing"></span></div>
                 <a href="#contact">Hire me</a>
             </div>
         </div>
