--- a/index.html
+++ b/index.html
@@ -331,31 +331,31 @@
                 <div class="card">
                     <div class="box">
                         <img src="images/project-images/python/rockauto.jpeg" alt="">
-                        <div class="text">Rock Auto<br>Scraper</div>
+                        <a href="single-project-details/projects/projects-python/rock-auto-scraper.html" style="color: white;"><div class="text">Rock Auto<br>Scraper</div></a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/project-images/python/linkedin-logo.png" alt="">
-                        <div class="text">Linkedin <br> Scraper</div>
+                        <a href="single-project-details/projects/projects-python/linkedin-scraper.html" style="color: white;"><div class="text">Linkedin<br>Scraper</div></a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/project-images/python/google-map.webp" alt="">
-                        <div class="text">Google Map <br> Scraper</div>
+                        <a href="single-project-details/projects/projects-python/google-map-scraper.html" style="color: white;"><div class="text">Google Map<br>Scraper</div></a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/project-images/python/nottage.png" alt="">
-                        <div class="text">Nottage API <br> Scraper</div>
+                        <a href="single-project-details/projects/projects-python/nottage-api-scraper.html" style="color: white;"><div class="text">Nottage API<br>Scraper</div></a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/project-images/python/promo.png" alt="">
-                        <div class="text">Promo Collection Scraper</div>
+                        <a href="single-project-details/projects/projects-python/promo-collection-scraper.html" style="color: white;"><div class="text">Promo Collection<br>Scraper</div></a>
                     </div>
                 </div>
                 
@@ -366,33 +366,28 @@
                 <div class="card">
                     <div class="box">
                         <img src="images/project-images/wordpress/worimi-collective-logo.png" alt="">
-                        <!-- <a href="single-project-details/projects/projects-wordpress/" style="color: white;"><div class="text">Single Vendor<br>Ecommerce Website</div></a> -->
-                        <a href="#" style="color: white;"><div class="text">Single Vendor<br>Ecommerce Website</div></a>
+                        <a href="single-project-details/projects/projects-wordpress/single-vendor-ecommerce-worimi-collective.html" style="color: white;"><div class="text">Single Vendor<br>Ecommerce Website</div></a>
 
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/project-images/wordpress/ecommerce-single-vendor_101.webp" alt="">
-                        <!-- <a href="single-project-details/projects/projects-wordpress/" style="color: white;"><div class="text">Single Vendor<br>Ecommerce Website</div></a> -->
-                        <a href="#" style="color: white;"><div class="text">Single Vendor<br>Ecommerce Website</div></a>
+                        <a href="single-project-details/projects/projects-wordpress/single-vendor-ecommerce-website.html" style="color: white;"><div class="text">Single Vendor<br>Ecommerce Website</div></a>
 
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/project-images/wordpress/worimi-promo-logo.png" alt="">
-                        <!-- <a href="single-project-details/projects/projects-wordpress/" style="color: white;"><div class="text">Single Vendor<br>Ecommerce Website</div></a> -->
-                        <a href="#" style="color: white;"><div class="text">Single Vendor<br>Ecommerce Website</div></a>
+                        <a href="single-project-details/projects/projects-wordpress/single-vendor-ecommerce-worimi-promo.html" style="color: white;"><div class="text">Single Vendor<br>Ecommerce Website</div></a>
 
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/project-images/wordpress/charity-website-logo.png" alt="">
-                        <!-- <a href="single-project-details/projects/projects-wordpress/" style="color: white;"><div class="text">Charity & Fund <br>Raising Website </div></a> -->
-                        <a href="#" style="color: white;"><div class="text">Charity & Fund <br>Raising Website </div></a>
-
+                        <a href="single-project-details/projects/projects-wordpress/fund-and-charity-website.html" style="color: white;"><div class="text">Charity & Fund <br>Raising Website </div></a>
                     </div>
                 </div>
             </div>
