--- a/single-project-details/projects/projects-laravel/online-bookshop.html
+++ b/single-project-details/projects/projects-laravel/online-bookshop.html
@@ -87,7 +87,7 @@
                 </div>
                 <div class="project-button">
                     <div class="live-project-button">
-                        <a href="../../index.html#teams"><button type="button">Back To Projects</button></a>
+                        <a href="../../../index.html#teams"><button type="button">Back To Projects</button></a>
 
                         <a href="http://paperbackbd.com/" style="float: right;" target="_blank"><button type="button">Check Live Project</button></a>
                     </div>
