--- a/single-project-details/projects/projects-python/rock-auto-scraper.html
+++ b/single-project-details/projects/projects-python/rock-auto-scraper.html
@@ -23,51 +23,36 @@
             <div class="section-padding">
                 <div class="screenshot_slider owl-carousel">
                     <div class="item">
-                        <img style="width: 650px; height: 490px;" src="../../images/project-laravel-images/banking-chatbot-images/banking-chatbot-001.png" alt="" title="">
+                        <img style="width: 650px; height: 490px;" src="../../images/project-python-images/rock-auto-scraper-images/rock-auto-001.png" alt="" title="">
                     </div>
                     <div class="item">
-                        <img style="width: 650px; height: 490px;" src="../../images/project-laravel-images/banking-chatbot-images/banking-chatbot-002.png" alt="" title="">
+                        <img style="width: 650px; height: 490px;" src="../../images/project-python-images/rock-auto-scraper-images/rock-auto-002.png" alt="" title="">
                     </div>
                     <div class="item">
-                        <img style="width: 650px; height: 490px;" src="../../images/project-laravel-images/banking-chatbot-images/banking-chatbot-003.png" alt="" title="">
+                        <img style="width: 650px; height: 490px;" src="../../images/project-python-images/rock-auto-scraper-images/rock-auto-003.png" alt="" title="">
                     </div>
-                    <div class="item">
-                        <img style="width: 650px; height: 490px;" src="../../images/project-laravel-images/banking-chatbot-images/banking-chatbot-004.png" alt="" title="">
-                    </div>
-                    <div class="item">
-                        <img style="width: 650px; height: 490px;" src="../../images/project-laravel-images/banking-chatbot-images/banking-chatbot-005.png" alt="" title="">
-                    </div>
-                    <div class="item">
-                        <img style="width: 650px; height: 490px;" src="../../images/project-laravel-images/banking-chatbot-images/banking-chatbot-006.png" alt="" title="">
-                    </div>
-                    <div class="item">
-                        <img style="width: 650px; height: 490px;" src="../../images/project-laravel-images/banking-chatbot-images/banking-chatbot-007.png" alt="" title="">
-                    </div>         
-
+                     
                 </div>
             </div>
         </div>
         <div style="flex:1;margin-right: 30px;">
             <div class="project-details-container">
                 <div class="project-headline">
-                    <h1 class="proejct-title" >Banking Chatbot</h1>
-                    <h2 class="proejct-subtitle">AL-Arafah Islami Bank Limited</h2>
+                    <h1 class="proejct-title" >Rock-Auto Scraper</h1>
                 </div>
                 <div class="project-description">
                     <h3 style="color: crimson;">Description</h3>
-                    <p></p>
-                    <p></p>
-                    <p>The project was built with Laravel, Botman, SMS API for <span style="color: crimson;">AL-ARAFAH ISLAMI BANK LIMITED.</span></p>
-                </div>
-                <div class="project-features">
-                    <h3 style="color: crimson;">Main Features</h3>
-                    <p>Two step verification through SMS, Check Banking Information, General Purpose Information, Check Bank Account Balance</p>
+                    <p>RockAuto is an online, family business founded in 1999 by automotive engineers with two goals:<br>
+                        1. Liberate information hidden behind the auto parts store counter (by listing all available items and product specifications on RockAuto.com, not just what one store stocks or one counter-person knows)<br>
+                        2. Make auto parts affordable (by remaining a strictly online company, we have no store locations, no counter-people and don't have a lot of money tied up in slow-moving inventory. We pass on those savings with lower prices so cars of all ages can be reliable and fun to drive.)
+                    </p>
+                    <p>They ship thousands of parts, from hundreds of manufacturers, to millions of customers all over the world. And the RockAuto catalog keeps expanding. Someday, it may be possible to build an entire car using parts from RockAuto! </p>
+                    <p>More than 10,000 rows with images scraped</p>
+                    <p>The project was built with PYTHON for a client.</p>
                 </div>
                 <div class="project-button">
                     <div class="live-project-button">
                         <a href="../../../index.html#teams"><button type="button">Back To Projects</button></a>
-
-                        <a href="http://demobot.messageanalytica.com/" style="float: right;" target="_blank"><button type="button">Check Live Project</button></a>
                     </div>
                 </div>
 
