--- a/top-project-list/top-projects-python.html
+++ b/top-project-list/top-projects-python.html
@@ -28,25 +28,25 @@
                 <div class="column">
                     <div class="card">
                         <img src="../images/project-images/python/rockauto.jpeg">
-                        <h3>Rock Auto Scraper</h3>
+                        <h3><a href="../single-project-details/projects/projects-python/rock-auto-scraper.html">Rock Auto Scraper</a></h3>
                     </div>
                 </div>
                 <div class="column">
                     <div class="card">
                         <img src="../images/project-images/python/linkedin-logo.png">
-                        <h3>Linkedin Scraper</h3>
+                        <h3><a href="../single-project-details/projects/projects-python/linkedin-scraper.html">Linkeding Scraper</a></h3>
                     </div>
                 </div>
                 <div class="column">
                     <div class="card">
                         <img src="../images/project-images/python/google-map.webp">
-                        <h3>Google Map Scraper</h3>
+                        <h3><a href="../single-project-details/projects/projects-python/google-map-scraper.html">Google Map Scraper</a></h3>
                     </div>
                 </div>
                 <div class="column">
                     <div class="card">
                         <img src="../images/project-images/python/nottage.png">
-                        <h3>Nottage API Scraper</h3>
+                        <h3><a href="../single-project-details/projects/projects-python/nottage-api-scraper.html">Nottage API Scraper</a></h3>
                     </div>
                 </div>
                 
@@ -55,7 +55,8 @@
                 <div class="column">
                     <div class="card">
                         <img src="../images/project-images/python/promo.png">
-                        <h3>Promo Collection Scraper</h3>
+                        <h3><a href="../single-project-details/projects/projects-python/promo-collection-scraper.html">Promo Collection Scraper</a></h3>
+
                     </div>
                 </div>
             </div>
