--- a/top-project-list/top-projects-wordpress.html
+++ b/top-project-list/top-projects-wordpress.html
@@ -28,30 +28,30 @@
                 <div class="column">
                     <div class="card">
                         <img src="../images/project-images/wordpress/worimi-collective-logo.png">
-                        <h3><a href="../single-project-details/projects/">Ecommerce <br> Single Vendor</a></h3>
+                        <h3><a href="../single-project-details/projects/projects-wordpress/single-vendor-ecommerce-worimi-collective.html">Ecommerce <br> Single Vendor</a></h3>
                     </div>
                 </div>
                 <div class="column">
                     <div class="card">
                         <img src="../images/project-images/wordpress/charity-website-logo.png">
-                        <h3><a href="../single-project-details/projects/">Charity & Fund <br> Raising Website</a></h3>
+                        <h3><a href="../single-project-details/projects/projects-wordpress/fund-and-charity-website.html">Charity & Fund <br> Raising Website</a></h3>
                     </div>
                 </div>
                 
                 <div class="column">
                     <div class="card">
                         <img src="../images/project-images/wordpress/worimi-promo-logo.png">
-                        <h3><a href="../single-project-details/projects/">Ecommerce <br> Single Vendor</a></h3>
+                        <h3><a href="../single-project-details/projects/projects-wordpress/single-vendor-ecommerce-worimi-promo.html">Ecommerce <br> Single Vendor</a></h3>
                     </div>
                 </div>
                 <div class="column">
                     <div class="card">
                         <img src="../images/project-images/wordpress/ecommerce-single-vendor_101.webp">
-                        <h3><a href="../single-project-details/projects/">Ecommerce <br> Single Vendor</a></h3>
+                        <h3><a href="../single-project-details/projects/projects-wordpress/single-vendor-ecommerce-website.html">Ecommerce <br> Single Vendor</a></h3>
                     </div>
                 </div>
             </div>
-            <div class="row" style="margin-top: 20px;">
+            <!-- <div class="row" style="margin-top: 20px;">
                 <div class="column">
                     <div class="card">
                         <img src="../images/project-images/wordpress/ecommerce-single-vendor_101.webp">
@@ -76,7 +76,7 @@
                         <h3><a href="../single-project-details/projects/">Ecommerce <br> Single Vendor</a></h3>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <div class="back-button">
