--- a/single-project-details/projects/projects-laravel/human-resource-management-system.html
+++ b/single-project-details/projects/projects-laravel/human-resource-management-system.html
@@ -107,7 +107,7 @@
                 </div>
                 <div class="project-button">
                     <div class="live-project-button">
-                        <a href="../../index.html#teams"><button type="button">Back To Projects</button></a>
+                        <a href="../../../index.html#teams"><button type="button">Back To Projects</button></a>
 
                         <a href=" http://hrm.thectbl.com/" style="float: right;" target="_blank"><button type="button">Check Live Project</button></a>
                     </div>
