--- a/single-project-details/projects/projects-wordpress/single-vendor-ecommerce-worimi-collective.html
+++ b/single-project-details/projects/projects-wordpress/single-vendor-ecommerce-worimi-collective.html
@@ -23,51 +23,39 @@
             <div class="section-padding">
                 <div class="screenshot_slider owl-carousel">
                     <div class="item">
-                        <img style="width: 650px; height: 490px;" src="../../images/project-laravel-images/banking-chatbot-images/banking-chatbot-001.png" alt="" title="">
+                        <img style="width: 650px; height: 490px;" src="../../images/project-wordpress-images/ecommerce-worimi-collective-images/worimi-collective-001.png" alt="" title="">
                     </div>
                     <div class="item">
-                        <img style="width: 650px; height: 490px;" src="../../images/project-laravel-images/banking-chatbot-images/banking-chatbot-002.png" alt="" title="">
-                    </div>
+                        <img style="width: 650px; height: 490px;" src="../../images/project-wordpress-images/ecommerce-worimi-collective-images/worimi-collective-002.png" alt="" title="">
+                    </div> 
                     <div class="item">
-                        <img style="width: 650px; height: 490px;" src="../../images/project-laravel-images/banking-chatbot-images/banking-chatbot-003.png" alt="" title="">
-                    </div>
+                        <img style="width: 650px; height: 490px;" src="../../images/project-wordpress-images/ecommerce-worimi-collective-images/worimi-collective-003.png" alt="" title="">
+                    </div> 
                     <div class="item">
-                        <img style="width: 650px; height: 490px;" src="../../images/project-laravel-images/banking-chatbot-images/banking-chatbot-004.png" alt="" title="">
-                    </div>
+                        <img style="width: 650px; height: 490px;" src="../../images/project-wordpress-images/ecommerce-worimi-collective-images/worimi-collective-004.png" alt="" title="">
+                    </div> 
                     <div class="item">
-                        <img style="width: 650px; height: 490px;" src="../../images/project-laravel-images/banking-chatbot-images/banking-chatbot-005.png" alt="" title="">
-                    </div>
-                    <div class="item">
-                        <img style="width: 650px; height: 490px;" src="../../images/project-laravel-images/banking-chatbot-images/banking-chatbot-006.png" alt="" title="">
-                    </div>
-                    <div class="item">
-                        <img style="width: 650px; height: 490px;" src="../../images/project-laravel-images/banking-chatbot-images/banking-chatbot-007.png" alt="" title="">
-                    </div>         
-
+                        <img style="width: 650px; height: 490px;" src="../../images/project-wordpress-images/ecommerce-worimi-collective-images/worimi-collective-005.png" alt="" title="">
+                    </div>        
                 </div>
             </div>
         </div>
         <div style="flex:1;margin-right: 30px;">
             <div class="project-details-container">
                 <div class="project-headline">
-                    <h1 class="proejct-title" >Banking Chatbot</h1>
-                    <h2 class="proejct-subtitle">AL-Arafah Islami Bank Limited</h2>
+                    <h1 class="proejct-title" >Single Vendor Ecommerce Website</h1>
+                    <h2 class="proejct-subtitle">Worimi Collective</h2>
                 </div>
                 <div class="project-description">
                     <h3 style="color: crimson;">Description</h3>
                     <p></p>
-                    <p></p>
-                    <p>The project was built with Laravel, Botman, SMS API for <span style="color: crimson;">AL-ARAFAH ISLAMI BANK LIMITED.</span></p>
-                </div>
-                <div class="project-features">
-                    <h3 style="color: crimson;">Main Features</h3>
-                    <p>Two step verification through SMS, Check Banking Information, General Purpose Information, Check Bank Account Balance</p>
+                    <p>The project was built with WordPress for <span style="color: crimson;">WORIMI COLLECTIVE</span></p>
                 </div>
                 <div class="project-button">
                     <div class="live-project-button">
                         <a href="../../../index.html#teams"><button type="button">Back To Projects</button></a>
 
-                        <a href="http://demobot.messageanalytica.com/" style="float: right;" target="_blank"><button type="button">Check Live Project</button></a>
+                        <a href="https://worimicollective.com/" style="float: right;" target="_blank"><button type="button">Check Live Project</button></a>
                     </div>
                 </div>
 
