client name updated in textile merchandising system

--- a/single-project-details/projects/projects-laravel/textile-merchandising-solution.html
+++ b/single-project-details/projects/projects-laravel/textile-merchandising-solution.html
@@ -71,7 +71,7 @@
                     <h3 style="color: crimson;">Description</h3>
                     <p></p>
                     <p></p>
-                    <p>The project was built with Laravel, PHP, Javascript, MySQL for <span style="color: crimson;">ROBI AXIATA LIMITED.</span></p>
+                    <p>The project was built with Laravel, PHP, Javascript, MySQL for <span style="color: crimson;">UNITY FABRICS INDUSTRIES LIMITED.</span></p>
                 </div>
                 <div class="project-features">
                     <h3 style="color: crimson;">Main Features</h3>
