top project list project name updated

--- a/top-project-list/top-projects-laravel.html
+++ b/top-project-list/top-projects-laravel.html
@@ -34,7 +34,7 @@
                 <div class="column">
                     <div class="card">
                         <img src="../images/project-images/laravel/smartbin_robi.png">
-                        <h3><a href="../single-project-details/projects/smart-bin-management-systetm.html">Smart Bin Management System</a></h3>
+                        <h3><a href="../single-project-details/projects/projects-laravel/smart-bin-management-systetm.html">Smart Bin Management System</a></h3>
                     </div>
                 </div>
                 
@@ -69,7 +69,7 @@
                 <div class="column">
                     <div class="card">
                         <img src="../images/project-images/laravel/ewallet.png">
-                        <h3><a href="../single-project-details/projects/projects-laravel/dollar-exchanger.html">Dollar <br> Exhcanger</a></h3>
+                        <h3><a href="../single-project-details/projects/projects-laravel/dollar-exchanger.html">Dollar <br> Exchanger</a></h3>
                     </div>
                 </div>
                 <div class="column">
