--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm a <span class="typing-2"></span></div>
-                    <p>A Full-Stack Software Engineer, currently living in Dhaka, Bangladesh. I have a Bachelor of Science in Computer Science and Engineering from <a href="https://iubat.edu/"><b>IUBAT</b></a> and my primary focus is to create smart solutions. In my free time, I read different kinds of books and blogs to keep me updating with the latest technologies.</p>
+                    <p>A Full-Stack Software Engineer, currently living in Dhaka, Bangladesh. I have a Bachelor of Science in Computer Science and Engineering from <a href="https://iubat.edu/"><b>IUBAT</b></a> and my primary focus is to create smart solutions. In my free time, I read different kinds of books and blogs to keep me updated with the latest technologies.</p>
                     <br>
                     <p>I am both driven and self-motivated who is constantly experimenting with new technologies and techniques. Very passionate about developing softwares and strive to better myself as an engineer  and the development community as a whole.</p>
                     <br>
